# CG_1617

./: .gitignore  README.md  makefile
CGfase1/: README.md  makefile
CGfase1/gerador/: gerador  main.cpp  makefile
CGfase1/motor/: main.cpp  makefile  motor
CGfase1/motor/xml/: configuracao.xml
CGfase2/: CMakeLists.txt  makefile
CGfase2/gerador/: gerador
CGfase2/motor/: main.cpp  motor  sphere.3d
CGfase2/motor/xml/: 2fase_1.xml  2fase_2.xml  solarf.xml
CGfase3/: CMakeLists.txt  teste.xml  universo.xml  universo_2.xml
CGfase3/formas/: anel.3d  background.3d  box.3d  cone.3d  plane.3d  sphere.3d  teapot.3d
CGfase3/lib/tinyxml/: tinyxml.cpp  tinyxml.h
CGfase3/src/: gerador.cpp  motor.cpp
